--- a/style.css
+++ b/style.css
@@ -1,85 +1,3 @@
-/*!* entire container, keeps perspective *!*/
-/*.flip-container {*/
-    /*perspective: 1000px;*/
-/*}*/
-/*!* flip the pane when hovered *!*/
-/*.flip-container:hover .flipper, .flip-container.hover .flipper {*/
-    /*transform: rotateY(180deg);*/
-/*}*/
-
-/*.flip-container, .front, .back {*/
-    /*width: 320px;*/
-    /*!*height: 480px;*!*/
-/*}*/
-
-/*!* flip speed goes here *!*/
-/*.flipper {*/
-    /*transition: 0.6s;*/
-    /*transform-style: preserve-3d;*/
-
-    /*position: relative;*/
-/*}*/
-
-/*!* hide back of pane during swap *!*/
-/*.front, .back {*/
-    /*backface-visibility: hidden;*/
-
-    /*position: absolute;*/
-    /*top: 0;*/
-    /*left: 0;*/
-/*}*/
-
-/*!* front pane, placed above back *!*/
-/*.front {*/
-    /*z-index: 2;*/
-    /*!* for firefox 31 *!*/
-    /*!*transform: rotateY(0deg);*!*/
-/*}*/
-
-/*!* back, initially hidden pane *!*/
-/*.back {*/
-    /*transform: rotateY(180deg);*/
-/*}*/
-
-
-
-/*#f1_container {*/
-    /*position: relative;*/
-    /*margin: 10px auto;*/
-    /*width: 450px;*/
-    /*height: 281px;*/
-    /*z-index: 1;*/
-/*}*/
-/*#f1_container {*/
-    /*perspective: 1000;*/
-/*}*/
-/*#f1_card {*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*transform-style: preserve-3d;*/
-    /*transition: all 1.0s linear;*/
-/*}*/
-/*#f1_container:hover #f1_card {*/
-    /*transform: rotateY(180deg);*/
-    /*box-shadow: -5px 5px 5px #aaa;*/
-/*}*/
-/*.face {*/
-    /*position: absolute;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*backface-visibility: hidden;*/
-/*}*/
-/*.face.back {*/
-    /*display: block;*/
-    /*transform: rotateY(180deg);*/
-    /*box-sizing: border-box;*/
-    /*padding: 10px;*/
-    /*color: white;*/
-    /*text-align: center;*/
-    /*background-color: #aaa;*/
-/*}*/
-
-/*///////////////////*/
 
 .card-container {
     /*cursor: pointer;*/
@@ -134,3 +52,157 @@
     width: 40px;
     margin: 5px;
 }
+
+
+/*!*********about authors***********!*/
+
+/*.authors h1{*/
+    /*font-weight: 800;*/
+    /*font-size: 50px;*/
+    /*color: #FF8619;*/
+    /*margin-bottom: 30px;*/
+/*}*/
+
+/*.authorsPosition{*/
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*flex-wrap: wrap;*/
+    /*justify-content: space-around;*/
+/*}*/
+
+/*div.authors{*/
+    /*margin-top: 20em;*/
+    /*margin-bottom: 20em;*/
+    /*text-align: center;*/
+/*}*/
+
+/*div.author{*/
+    /*!*display: inline-block;*!*/
+    /*margin-left: 20px;*/
+    /*display: flex;*/
+    /*flex-direction: row;*/
+    /*margin-top: 10px;*/
+/*}*/
+
+/*div.icons{*/
+    /*display: inline-block;*/
+    /*width: 30px;*/
+    /*!*height: 369px;*!*/
+/*}*/
+
+/*.photo{*/
+    /*width: 200px;*/
+    /*height: 300px;*/
+    /*font-size: 200px;*/
+/*}*/
+
+/*.icon{*/
+    /*width: 20px;*/
+    /*height: 20px;*/
+    /*margin-top: 10px;*/
+/*}*/
+
+/*.icon:hover{*/
+    /*width: 30px;*/
+    /*height: 30px;*/
+/*}*/
+
+/*.name{*/
+    /*position: relative;*/
+    /*color: #FF8619;*/
+    /*font-weight: bold;*/
+    /*font-size: 20px;*/
+/*}*/
+
+/*.function{*/
+    /*color: #36312C;*/
+/*}*/
+
+/*.authorInfo {*/
+    /*text-align: center;*/
+    /*display: inline-block;*/
+    /*width: 200px;*/
+/*}*/
+
+/*JEDI*/
+
+/*.authors h1{*/
+    /*font-weight: 800;*/
+    /*font-size: 50px;*/
+    /*color: #FF8619;*/
+    /*margin-bottom: 30px;*/
+/*}*/
+
+/*div.authors{*/
+    /*margin-top: 10em;*/
+    /*margin-bottom: 5em;*/
+/*}*/
+
+/*div.author{*/
+    /*margin-top: 10px;*/
+/*}*/
+
+/*.name{*/
+    /*color: #FF8619;*/
+    /*font-weight: bold;*/
+    /*font-size: 20px;*/
+/*}*/
+
+/*.function{*/
+    /*color: #36312C;*/
+/*}*/
+
+/*.card-container {*/
+    /*position: relative;*/
+    /*width: 180px;*/
+    /*height: 200px;*/
+    /*margin-bottom: 5em;*/
+/*}*/
+/*.card{*/
+    /*transform-style: preserve-3d;*/
+    /*transition: all 1s ease-in-out;*/
+/*}*/
+/*.card:hover {*/
+    /*transform: rotateY(180deg);*/
+/*}*/
+/*.card .side {*/
+    /*backface-visibility: hidden;*/
+    /*height: 200px;*/
+    /*width: 180px;*/
+    /*overflow: hidden;*/
+/*}*/
+/*.card .back {*/
+    /*!*background: white;*!*/
+    /*transform: rotateY(180deg);*/
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*border: 2px solid #FF8619;*/
+    /*border-radius: 6px;*/
+/*}*/
+
+/*.starW{*/
+    /*!*width: 100%;*!*/
+    /*height: 100%;*/
+/*}*/
+
+/*.icon {*/
+    /*width: 50px;*/
+    /*margin: 10px;*/
+/*}*/
+
+/*.icon:hover{*/
+    /*width: 60px;*/
+    /*margin: 5px;*/
+/*}*/
+
+/*.iconPosition{*/
+    /*margin-top: 33px;*/
+/*}*/
+
+/*@media screen and (max-width: 991px){*/
+    /*.authors h1{*/
+        /*text-align: center;*/
+    /*}*/
+/*}*/
+
